# KitaGram

./: README.md
innotter-micro-service/: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
innotter-micro-service/app/: pytest.ini
innotter-micro-service/app/app/: settings.py  urls.py
innotter-micro-service/app/innotter/: __init__.py  apps.py  managers.py  models.py  paginations.py  permissions.py  serializers.py  signals.py  urls.py  views.py
innotter-micro-service/app/innotter/migrations/: 0001_initial.py  0002_rename_page_id_follower_page_and_more.py  0004_room_datetime.py  (+4 more)
innotter-micro-service/app/test/: conftest.py
user-management-micro-service/: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini
user-management-micro-service/.github/workflows/: ci.yml
user-management-micro-service/app/: config.py  main.py
user-management-micro-service/app/api/: auth.py  dependencies.py  healthcheck.py  routers.py  user.py
user-management-micro-service/app/cache_storage/: cache_storage.py
user-management-micro-service/app/db/: __init__.py  db.py
user-management-micro-service/app/migrations/: env.py
user-management-micro-service/app/models/: groups.py  users.py
user-management-micro-service/app/repositories/: cache.py  cloud.py  groups.py
user-management-micro-service/app/schemas/: base.py  groups.py  users.py
user-management-micro-service/app/services/: auth.py  cache.py  cloud.py  email.py  groups.py  users.py
user-management-micro-service/app/utils/: auth.py  oauth_bearer.py  repository.py  roles.py
user-management-micro-service/aws/: verify-email-sender.sh
user-management-micro-service/tests/: conftest.py
user-management-micro-service/tests/integration_tests/: conftest.py  test_auth.py  test_healthcheck.py  test_user.py
user-management-micro-service/tests/unit_tests/: conftest.py  test_auth_service.py  test_cache_service.py  test_cloud_service.py  test_email_service.py  test_groups_service.py  test_users_service.py
(+88 files in other folders)
